fix issue with clipping of decenders on the second line of the features

--- a/store/styles/_includes/_store_hero_view.scss
+++ b/store/styles/_includes/_store_hero_view.scss
@@ -132,8 +132,6 @@
             margin: 0;
             font-size: 14px;
             line-height: 16px;
-            overflow: hidden;
-            text-overflow: ellipsis;
         }
     }
 
